changed routes to be more classes based for glorified namespacing
